# fastapi_theory

./: Dockerfile  README.md  pyproject.toml  requirements.txt
src/: main.py
src/api/v1/: films.py
src/api/v1/models/: films.py
src/core/: config.py  logger.py
src/db/: elastic.py  redis.py
src/models/: film.py  mixins.py
src/services/: film.py
src/utils/: formatters.py  storages.py
tests/functional/: Dockerfile  docker-compose.yml  requirements.txt  settings.py
tests/functional/src/: test_search.py
tests/functional/utils/: wait_for_es.py  wait_for_redis.py
