[tool.poetry]
name = "fastapi-theory"
version = "0.1.0"
description = ""
authors = ["LuchnikKek <ilua.Kabeshov01@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.3"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
uvloop = "^0.19.0"
redis = "^5.0.1"
orjson = "^3.9.12"
elasticsearch = {extras = ["async"], version = "^8.12.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
