[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["LuchnikKek <ilua.Kabeshov01@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
gunicorn = "^21.2.0"
uvicorn = "^0.26.0"
uvloop = "^0.19.0"
redis = "^5.0.1"
orjson = "^3.9.12"
elasticsearch = {extras = ["async"], version = "^8.12.0"}

[tool.poetry.group.test.dependencies]
pytest-asyncio = "^0.23.4"
aiohttp = "^3.9.3"
pydantic-settings = "^2.1.0"
pytest = "7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
